kernel/tests/data/invalid/constructor_param_output_not_a_type.ck
data Unit : Type where
  | mk : Unit

data Invalid : Type where
  | c : (Invalid -> Unit.mk) -> Invalid